<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_custom_recommend"
        android:icon="@drawable/ic_spotify_app_icon"
        android:title="@string/recommended" />

    <item
        android:id="@+id/navigation_top_songs"
        android:icon="@drawable/favorite_heart_icon"
        android:iconTint="@color/black"
        android:title="@string/top" />

    <item
        android:id="@+id/navigation_recommended_songs"
        android:icon="@drawable/spotify_icon"
        android:title="Spotify" />

    <item
        android:id="@+id/navigation_playlist"
        android:icon="@drawable/queue_music_48px"
        android:title="@string/playlist" />

</menu>