<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="com.example.spotifyexplained.model.enums.VisualState"/>
        <import type="com.example.spotifyexplained.model.enums.LoadingState"/>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="com.example.spotifyexplained.ui.playlist.PlaylistViewModel" />
    </data>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.playlist.PlaylistFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/my_toolbar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bar_size"
        android:background="@color/purple_700"
        android:elevation="4dp"
        app:title="@string/playlist_title"
        app:titleCentered="true"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Medium"
        app:titleTextColor="@color/white">

        <ImageView
            android:id="@+id/menu_button"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/info_48px"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            app:tint="@color/white" />

    </com.google.android.material.appbar.MaterialToolbar>

    <LinearLayout
        android:id="@+id/buttons_switch"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/my_toolbar"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/table_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@{viewModel.visualState == VisualState.TABLE ? @drawable/rounded_button_selected :  @drawable/rounded_button_unselected}"
            android:text="@string/playlist"
            android:animateLayoutChanges="true"
            android:paddingTop="@{viewModel.visualState == VisualState.TABLE ? @dimen/selected_vertical_padding : @dimen/unselected_vertical_padding}"
            android:paddingBottom="@{viewModel.visualState == VisualState.TABLE ? @dimen/selected_vertical_padding : @dimen/unselected_vertical_padding}"
            android:paddingStart="@{viewModel.visualState == VisualState.TABLE ? @dimen/selected_horizontal_padding : @dimen/unselected_horizontal_padding}"
            android:paddingEnd="@{viewModel.visualState == VisualState.TABLE ? @dimen/selected_horizontal_padding : @dimen/unselected_horizontal_padding}"
            android:textColor="@{viewModel.visualState == VisualState.TABLE ? @color/white : @color/black}"
            android:onClick="@{() -> viewModel.onListClick()}"/>
        <TextView
            android:id="@+id/graph_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:animateLayoutChanges="true"
            android:background="@{viewModel.visualState == VisualState.GRAPH ? @drawable/rounded_button_selected :  @drawable/rounded_button_unselected}"
            android:text="@string/select"
            android:paddingTop="@{viewModel.visualState == VisualState.GRAPH ? @dimen/selected_vertical_padding : @dimen/unselected_vertical_padding}"
            android:paddingBottom="@{viewModel.visualState == VisualState.GRAPH ? @dimen/selected_vertical_padding : @dimen/unselected_vertical_padding}"
            android:paddingStart="@{viewModel.visualState == VisualState.GRAPH ? @dimen/selected_horizontal_padding : @dimen/unselected_horizontal_padding}"
            android:paddingEnd="@{viewModel.visualState == VisualState.GRAPH ? @dimen/selected_horizontal_padding : @dimen/unselected_horizontal_padding}"
            android:textColor="@{viewModel.visualState == VisualState.GRAPH ? @color/white : @color/black}"
            android:onClick="@{() -> viewModel.onGraphClick()}"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/user_tracks_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/buttons_switch"
        android:layout_marginBottom="60dp"
        android:visibility="@{viewModel.visualState == VisualState.TABLE ? View.VISIBLE : View.GONE}"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <RelativeLayout
        android:id="@+id/bottom_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:background="?android:colorBackground"
        android:visibility="@{viewModel.visualState == VisualState.TABLE ? View.VISIBLE : View.GONE}">

        <Button
            android:id="@+id/save_playlist_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="?android:textColorSecondary"
            app:rippleColor="@color/purple_700"
            app:shapeAppearance="?attr/shapeAppearanceSmallComponent"
            app:strokeColor="?android:textColorSecondary"
            app:strokeWidth="1dp"
            android:layout_marginEnd="5dp"/>

        <Button
            android:id="@+id/delete_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/save_playlist_button"
            android:layout_marginStart="5dp"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textColor="?android:textColorSecondary" />
    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttons_switch">

    <RelativeLayout
        android:id="@+id/next_track_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="@{viewModel.visualState == VisualState.GRAPH ? View.VISIBLE : View.GONE}">

        <ImageView
            android:id="@+id/trackImage"
            imageUrl="@{viewModel.imageUrl}"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

        <TextView
            android:id="@+id/trackName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/trackImage"
            android:layout_centerHorizontal="true"
            android:text="@{viewModel.trackName}" />

        <TextView
            android:id="@+id/artistName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/trackName"
            android:layout_centerHorizontal="true"
            android:text="@{viewModel.artistName}" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:textAlignment="center"
            android:textSize="18sp"
            android:text="@string/playlist_no_pool_message"
            android:visibility="@{viewModel.loadingState == LoadingState.FAILURE ? View.VISIBLE : View.GONE}">
        </TextView>

        <LinearLayout
            android:id="@+id/circles_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/artistName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:orientation="horizontal"
            android:visibility="@{viewModel.loadingState == LoadingState.SUCCESS ? View.VISIBLE : View.GONE}">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/circle_selector"
                android:clickable="true"
                android:onClick="@{() -> viewModel.onLikeClick()}"
                android:src="@drawable/done_48px"
                app:civ_border_color="@color/green"
                app:civ_border_width="4dp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/circle_selector"
                android:clickable="true"
                android:onClick="@{() -> viewModel.onNeutralClick()}"
                android:src="@drawable/baseline_square_24"
                android:tint="@color/purple_700"
                app:civ_border_color="@color/purple_700"
                app:civ_border_width="4dp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/circle_selector"
                android:clickable="true"
                android:onClick="@{() -> viewModel.onDislikeClick()}"
                android:src="@drawable/close_48px"
                app:civ_border_color="@color/red"
                app:civ_border_width="4dp" />
        </LinearLayout>

        <WebView
            android:id="@+id/web_view_preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/circles_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:visibility="@{viewModel.isPremium ? View.GONE : View.VISIBLE}" />

        <RelativeLayout
            android:id="@+id/premium_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/circles_layout"
            android:layout_marginTop="30dp"
            android:visibility="@{viewModel.isPremium &amp;&amp; viewModel.loadingState == LoadingState.SUCCESS ? View.VISIBLE : View.GONE}">

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/seek_to"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="36dp"
                android:progressTint="?android:textColorSecondary"
                android:thumbTint="?android:textColorSecondary" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/play_pause_button"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_below="@+id/seek_to"
                android:layout_centerHorizontal="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:srcCompat="@drawable/play_arrow_48px" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/connect_play_button"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_below="@+id/seek_to"
                android:layout_centerHorizontal="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:srcCompat="@drawable/play_arrow_48px" />

            <Button
                android:id="@+id/save_remove_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/play_pause_button"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@{viewModel.isSaved ? @string/remove_from_library : @string/add_to_library}"
                android:textAllCaps="false"
                android:textColor="?android:textColorSecondary" />
        </RelativeLayout>

    </RelativeLayout>
    </ScrollView>


</RelativeLayout>
</layout>